--- a/index.html
+++ b/index.html
@@ -1,30 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <title>Chatteres - Home</title>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <script src="scripts.js"></script>
-    <link rel="shortcut icon" href="icon.png" type="image/x-icon">
-</head>
-<body>
-    <h2>Seja bem vindo ao...</h2>
-    <h1>Chattes!</h1>
-    <div class="auth">
-        
-        <div class="usernamediv">
-            <p id="user_title" style="align-self: flex-start;">Username</p>
-            <input type="text" id="username" style="
-            width: 100px;
-            align-self: flex-end">
-            <div class="auth">
+    <head>
+        <title>Chatteres - Home</title>
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+        <script>
+            username = document.getElementById("username")
+            password = document.getElementById("password")
+            function saveData(){
+                localStorage.setItem("username", username.value)
+                localStorage.setItem("password", password.value)
+                password.remove()
+                username.remove()
+            }
+                        </script>
+        <link rel="shortcut icon" href="icon.png" type="image/x-icon">
+    </head>
+    <body>
+        <h2 face="Arial">Seja bem vindo ao...</h2>
+        <h1 face="Arial">Chatteres!</h1>
+        <div class="auth">
+            
+            <div class="usernamediv">
+                <p face="Arial" id="user_title" style="align-self: flex-start;">Username</p>
+                <input face="Arial" type="text" id="username" style="
+                width: 100px;
+                align-self: flex-end">
+                <div class="auth">
+            </div>
+            <div class="passdiv">
+                <p face="Arial" id="user_title" style="align-self: flex-start;">Password</p>
+                <input face="Arial" type="password" id="password" style="
+                width: 100px;
+                align-self: flex-end">
+            </div>
+            <input face="Arial" type="button" value="Save" onclick="saveData()">
         </div>
-        <div class="passdiv">
-            <p id="user_title" style="align-self: flex-start;">Password</p>
-            <input type="password" id="password" style="
-            width: 100px;
-            align-self: flex-end">
-        </div>
-        <input type="button" value="Save" onclick="saveData()">
-    </div>
-</body>
+    </body>
 </html>
