--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="auth">
             
             <div class="usernamediv">
-                <p face="Arial" id="user_title" style="align-self: flex-start;">Username</p>
+                <p face="Arial" id="user_title" style="align-self: flex-start; font-display: Arial;">Username</p>
                 <input face="Arial" type="text" id="username" style="
                 width: 100px;
                 align-self: flex-end">
