Tentando retirar o script dos commits

--- a/index.html
+++ b/index.html
@@ -3,16 +3,7 @@
     <head>
         <title>Chatteres - Home</title>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-        <script>
-            username = document.getElementById("username")
-            password = document.getElementById("password")
-            function saveData(){
-                localStorage.setItem("username", username.value)
-                localStorage.setItem("password", password.value)
-                password.remove()
-                username.remove()
-            }
-                        </script>
+        <script src="content.js"></script>
         <link rel="shortcut icon" href="icon.png" type="image/x-icon">
     </head>
     <body>
