--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
         <link rel="shortcut icon" href="icon.png" type="image/x-icon">
     </head>
     <body>
-        <h2 face="Arial">Seja bem vindo ao...</h2>
-        <h1 face="Arial">Chatteres!</h1>
+        <h2>Seja bem vindo ao...</h2>
+        <h1>Chatteres!</h1>
         <div class="auth">
             
             <div class="usernamediv">
-                <p face="Arial" id="user_title" style="align-self: flex-start; font-display: Arial;">Username</p>
-                <input face="Arial" type="text" id="username" style="
+                <p id="user_title" style="align-self: flex-start; font-display: Arial;">Username</p>
+                <input type="text" id="username" style="
                 width: 100px;
                 align-self: flex-end">
                 <div class="auth">
             </div>
             <div class="passdiv">
-                <p face="Arial" id="user_title" style="align-self: flex-start;">Password</p>
-                <input face="Arial" type="password" id="password" style="
+                <p id="user_title" style="align-self: flex-start;">Password</p>
+                <input type="password" id="password" style="
                 width: 100px;
                 align-self: flex-end">
             </div>
-            <input face="Arial" type="button" value="Save" onclick="saveData()">
+            <input type="button" value="Save" onclick="saveData()">
         </div>
     </body>
 </html>
