--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <script src="content.js"></script>
         <link rel="shortcut icon" href="icon.png" type="image/x-icon">
+        <style>
+            h1, h2, p, .password, .username{
+                font-family: Arial, Helvetica, sans-serif;
+            }
+        </style>
     </head>
     <body>
         <h2>Seja bem vindo ao...</h2>
