--- a/index.html
+++ b/index.html
@@ -6,25 +6,24 @@
         <script src="content.js"></script>
         <link rel="shortcut icon" href="icon.png" type="image/x-icon">
         <style>
-            h1, h2, p, .password, .username{
+            h1, h4, .password, .username{
                 font-family: Arial, Helvetica, sans-serif;
             }
         </style>
     </head>
     <body>
-        <h2>Seja bem vindo ao...</h2>
         <h1>Chatteres!</h1>
         <div class="auth">
             
             <div class="usernamediv">
-                <p id="user_title" style="align-self: flex-start; font-display: Arial;">Username</p>
+                <h4 id="user_title" style="align-self: flex-start; font-display: Arial;">Username</h4>
                 <input type="text" id="username" style="
                 width: 100px;
                 align-self: flex-end">
                 <div class="auth">
             </div>
             <div class="passdiv">
-                <p id="user_title" style="align-self: flex-start;">Password</p>
+                <h4 id="user_title" style="align-self: flex-start;">Password</h4>
                 <input type="password" id="password" style="
                 width: 100px;
                 align-self: flex-end">
