--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         </style>
     </head>
     <body>
-        <h1>Chatteres!</h1>
-        <div class="auth">
+        <h1 align="center">Chatteres!</h1>
+        <div align="center" class="auth">
             
             <div class="usernamediv">
                 <h4 id="user_title" style="align-self: flex-start; font-display: Arial;">Username</h4>
