--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
             h1, h4, .password, .username{
                 font-family: Arial, Helvetica, sans-serif;
             }
+            .title, .auth{
+                text-align: center;
+            }
         </style>
     </head>
     <body>
-        <h1 align="center">Chatteres!</h1>
-        <div align="center" class="auth">
+        <h1 id="title">Chatteres!</h1>
+        <div id="auth" class="auth">
             
             <div class="usernamediv">
                 <h4 id="user_title" style="align-self: flex-start; font-display: Arial;">Username</h4>
