--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </style>
     </head>
     <body>
-        <h1 id="title">Chatteres!</h1>
-        <div id="auth" class="auth">
+        <h1 class="title">Chatteres!</h1>
+        <div class="auth">
             
             <div class="usernamediv">
                 <h4 id="user_title" style="align-self: flex-start; font-display: Arial;">Username</h4>
