--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
             h1, h4, .password, .username{
                 font-family: Arial, Helvetica, sans-serif;
             }
-            .title, .auth{
+            .title, .auth, .subtitle{
                 text-align: center;
             }
         </style>
     </head>
     <body>
-        <h1 class="title">Chatteres!</h1>
+        <h1 class="title">Chatteres</h1>
+        <h3 class="subtitle">O novo chat para todos.</h3>
         <div class="auth">
             
             <div class="usernamediv">
