--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
             
             <div class="usernamediv">
                 <h4 id="user_title" style="align-self: flex-start; font-display: Arial;">Username</h4>
-                <input type="text" id="username" style="
-                width: 100px;
-                align-self: flex-end">
+                <input type="text" id="username" style="width: 100px; text-align: end;">
                 <div class="auth">
             </div>
             <div class="passdiv">
