--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script src="content.js"></script>
         <link rel="shortcut icon" href="icon.png" type="image/x-icon">
         <style>
-            h1, h4, .password, .username{
+            h1, h4, .password, .username, h3{
                 font-family: Arial, Helvetica, sans-serif;
             }
             .title, .auth, .subtitle{
