--- a/index.html
+++ b/index.html
@@ -21,15 +21,14 @@
             
             <div class="usernamediv">
                 <h4 id="user_title" style="align-self: flex-start; font-display: Arial;">Username</h4>
-                <input type="text" id="username" style="width: 100px; text-align: end;">
+                <input type="text" id="username" style="width: 100px;">
                 <div class="auth">
             </div>
             <div class="passdiv">
                 <h4 id="user_title" style="align-self: flex-start;">Password</h4>
-                <input type="password" id="password" style="
-                width: 100px;
-                align-self: flex-end">
+                <input type="password" id="password" style="width: 100px;">
             </div>
+            <script src="content.js"></script>
             <input type="button" value="Save" onclick="saveData()">
         </div>
     </body>
