--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
                 <h4 id="user_title" style="align-self: flex-start;">Password</h4>
                 <input type="password" id="password" style="width: 100px;">
             </div>
-            <script src="content.js"></script>
+            <script>
+                var password = document.getElementById("password")
+                var username = document.getElementById("username")
+                function saveData(){
+                    localStorage.setItem("username", username.value)
+                    localStorage.setItem("password", password.value)
+                }
+                </script>
             <input type="button" value="Save" onclick="saveData()">
         </div>
     </body>
