--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script src="content.js"></script>
         <link rel="shortcut icon" href="icon.png" type="image/x-icon">
         <style>
-            h1, h4, .password, .username, h3{
+            h1, h4, .password, .username, h3, #saveAccountButton{
                 font-family: Arial, Helvetica, sans-serif;
             }
             .title, .auth, .subtitle{
@@ -44,6 +44,6 @@
             }
         </script>
         <h4>   <h4>
-        <input type="button" value="Save" onclick="saveData()">
+        <input type="button" value="Save" class="saveAccountButton" onclick="saveData()">
     </body>
 </html>
