--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             h1, h4, .password, .username, h3, #saveAccountButton{
                 font-family: Arial, Helvetica, sans-serif;
             }
-            .title, .auth, .subtitle, .saveAccountButton{
+            .title, .auth, .subtitle, #saveAccountButton{
                 text-align: center;
             }
         </style>
