--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             .title, .auth, .subtitle, #saveAccountButton{
                 text-align: center;
             }
+            #saveAccountButton{
+                border: 2px solid grey;
+                border-radius: 10;
+            }
         </style>
     </head>
     <body>
