--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             }
             #saveAccountButton{
                 border: 2px solid grey;
-                border-radius: 10;
+                border-radius: 12px;
             }
         </style>
     </head>
