--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <link rel="shortcut icon" href="icon.png" type="image/x-icon">
         <style>
-            h1, h4, .password, .username, h3, #saveAccountButton{
+            h1, h4, .password, .username, h3, .saveAccountButton{
                 font-family: Arial, Helvetica, sans-serif;
             }
-            .title, .auth, .subtitle, #saveAccountButton{
+            .title, .auth, .subtitle, .saveAccountButton{
                 text-align: center;
             }
-            #saveAccountButton{
+            .saveAccountButton{
                 border: 2px solid grey;
                 border-radius: 12px;
             }
