--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
                 border: 2px solid grey;
                 border-radius: 12px;
             }
+            .saveAccountButton:hover {
+                background-color: #4CAF50;
+                color: white;
+            }
         </style>
     </head>
     <body>
@@ -35,9 +39,9 @@
             var password = document.getElementById("password")
             var username = document.getElementById("username")
             function saveData(){
-                if (localStorage.getItem("username") == undefined){
-                    localStorage.setItem("username", username.value)
-                    localStorage.setItem("password", password.value)
+                if (sessionStorage.getItem("username") == undefined){
+                    sessionStorage.setItem("username", username.value)
+                    sessionStorage.setItem("password", password.value)
                     document.getElementsByClassName("auth").remove
                 }
                 else{
@@ -46,6 +50,6 @@
                 authaccount = [username.value, password.value]
             }
         </script>
-        <input type="button" value="Save" class="saveAccountButton" onclick="saveData()">
+        <p type="button" class="saveAccountButton" onclick="saveData()">Save</p>
     </body>
 </html>
