--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
                 authaccount = [username.value, password.value]
             }
         </script>
-        <p type="button" class="saveAccountButton" onclick="saveData()">Save</p>
+        <input type="button" value="Register" class="saveAccountButton" onclick="saveData()">
     </body>
 </html>
