--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
                 text-align: center;
             }
             .saveAccountButton{
-                border: 2px solid grey;
+                border: 2px solid rgb(51, 51, 51);
                 border-radius: 12px;
             }
             .saveAccountButton:hover {
-                background-color: #4CAF50;
+                background-color: grey;
                 color: white;
             }
         </style>
