--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             }
             .saveAccountButton{
                 border: 2px solid rgb(51, 51, 51);
+                outline: none;
                 border-radius: 12px;
             }
             .saveAccountButton:hover {
