--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         <div class="auth">
             
             <div class="usernamediv">
-                <h4 id="user_title" style="align-self: flex-start; font-display: Arial;">Username</h4>
+                <h4 for="username" id="user_title" style="align-self: flex-start; font-display: Arial;">Username</h4>
                 <input type="text" id="username" style="width: 100px;">
             </div>
             <div class="passdiv">
-                <h4 id="user_title" style="align-self: flex-start;">Password</h4>
+                <h4 for="password" id="password_title" style="align-self: flex-start;">Password</h4>
                 <input type="password" id="password" style="width: 100px;">
             </div>
         </div>
